--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@
   language: go
   sudo: false
   go:
-    - 1.7
+    - 1.7.x
+    - 1.8.x
+    - tip
   install:
     - go get github.com/golang/lint/golint
   script:
