Update vendoring to include go-yaml
Add go-yaml/yaml vendor; re-run vndr, including updates to containerd
master.

Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -2,6 +2,7 @@ github.com/spf13/cobra 99ff9334bda26384b5ef4a4aaa4d444d29bdde73
 github.com/spf13/pflag e57e3eeb33f795204c1ca35f56c44f83227c6e66
 github.com/Sirupsen/logrus v0.11.5
 github.com/containerd/containerd master
+github.com/go-yaml/yaml v2
 # requirements for containerd vendoring
 github.com/pkg/errors v0.8.0
 github.com/opencontainers/go-digest 21dfd564fd89c944783d00d069f33e3e7123c448
