More cleanup to containerd driver and examples
Several cleanups to containerd driver/interactions:
 - use per-thread client connection (via driver object creation)
 - close driver so client closes after each thread completes
 - fix example yaml to have a stop for run, stop, delete ordering

Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/examples/ctrd-run.yaml
+++ b/examples/ctrd-run.yaml
@@ -1,4 +1,4 @@
-name: CtrdOnly
+name: CtrdRunOnly
 image: alpine
 command: date
 detached: true
@@ -6,8 +6,6 @@ drivers:
   - 
    type: Containerd
    threads: 5
-   iterations: 10
+   iterations: 50
 commands:
   - run
-  - stop
-  - delete
