--- a/vendor.conf
+++ b/vendor.conf
@@ -3,6 +3,7 @@ github.com/spf13/pflag e57e3eeb33f795204c1ca35f56c44f83227c6e66
 github.com/Sirupsen/logrus v0.11.5
 github.com/containerd/containerd master
 github.com/go-yaml/yaml v2
+github.com/montanaflynn/stats 41c34e4914ec3c05d485e564d9028d8861d5d9ad
 # requirements for containerd vendoring
 github.com/pkg/errors v0.8.0
 github.com/opencontainers/go-digest 21dfd564fd89c944783d00d069f33e3e7123c448
@@ -18,3 +19,4 @@ golang.org/x/sync 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
 golang.org/x/sys f3918c30c5c2cb527c0b071a27c35120a6c0719a
 github.com/boltdb/bolt e9cf4fae01b5a8ff89d0ec6b32f0d9c9f79aefdd
 github.com/containerd/fifo 69b99525e472735860a5269b75af1970142b3062
+github.com/docker/go-events aa2e3b613fbbfdddbe055a7b9e3ce271cfd83eca
