--- a/examples/docker-run.yaml
+++ b/examples/docker-run.yaml
@@ -1,12 +1,10 @@
-name: DockerBasic
+name: DockerRunOnly
 image: alpine:latest
 detached: true
 drivers:
   - 
    type: Docker
    threads: 3
-   iterations: 15
+   iterations: 10
 commands:
   - run
-  - stop
-  - delete
