Update to containerd master for API changes
This makes bucketbench work against the current master (post-alpha1) of
containerd.

Also update go-events and finally switch to lowercase [s]irupsen!

Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,7 +1,7 @@
 github.com/spf13/cobra 99ff9334bda26384b5ef4a4aaa4d444d29bdde73
 github.com/spf13/pflag e57e3eeb33f795204c1ca35f56c44f83227c6e66
-github.com/Sirupsen/logrus v0.11.5
-github.com/containerd/containerd 123aab86c004e6bca6aaaa905c1432a3fd98f126
+github.com/sirupsen/logrus v1.0.1
+github.com/containerd/containerd b84817a29c730a0c6feaad63ebec57f473a7e99a
 github.com/go-yaml/yaml v2
 github.com/montanaflynn/stats 41c34e4914ec3c05d485e564d9028d8861d5d9ad
 # requirements for containerd vendoring
@@ -19,4 +19,4 @@ golang.org/x/sync 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
 golang.org/x/sys f3918c30c5c2cb527c0b071a27c35120a6c0719a
 github.com/boltdb/bolt e9cf4fae01b5a8ff89d0ec6b32f0d9c9f79aefdd
 github.com/containerd/fifo 69b99525e472735860a5269b75af1970142b3062
-github.com/docker/go-events aa2e3b613fbbfdddbe055a7b9e3ce271cfd83eca
+github.com/docker/go-events 9461782956ad83b30282bf90e31fa6a70c255ba9
