Update vendoring to containerd 1.0.0-beta.1
Update vendoring, add typeurl new package, other vendor changes.

Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,7 +1,7 @@
 github.com/spf13/cobra 99ff9334bda26384b5ef4a4aaa4d444d29bdde73
 github.com/spf13/pflag e57e3eeb33f795204c1ca35f56c44f83227c6e66
 github.com/sirupsen/logrus v1.0.1
-github.com/containerd/containerd v1.0.0-beta.0
+github.com/containerd/containerd v1.0.0-beta.1
 github.com/go-yaml/yaml v2
 github.com/montanaflynn/stats 41c34e4914ec3c05d485e564d9028d8861d5d9ad
 # requirements for containerd vendoring
@@ -9,7 +9,7 @@ github.com/pkg/errors v0.8.0
 github.com/opencontainers/go-digest 21dfd564fd89c944783d00d069f33e3e7123c448
 github.com/opencontainers/image-spec v1.0.0
 github.com/opencontainers/runtime-spec v1.0.0
-github.com/opencontainers/runc e775f0fba3ea329b8b766451c892c41a3d49594d
+github.com/opencontainers/runc 593914b8bd5448a93f7c3e4902a03408b6d5c0ce
 google.golang.org/grpc v1.3.0
 github.com/golang/protobuf 5a0f697c9ed9d68fef0116532c6e05cfeae00e55
 github.com/gogo/protobuf d2e1ade2d719b78fe5b061b4c18a9f7111b5bdc8
@@ -21,4 +21,5 @@ golang.org/x/sys 7ddbeae9ae08c6a06a59597f0c9edbc5ff2444ce https://github.com/gol
 github.com/boltdb/bolt e9cf4fae01b5a8ff89d0ec6b32f0d9c9f79aefdd
 github.com/containerd/fifo fbfb6a11ec671efbe94ad1c12c2e98773f19e1e6
 github.com/containerd/continuity cf279e6ac893682272b4479d4c67fd3abf878b4e
+github.com/containerd/typeurl f6943554a7e7e88b3c14aad190bf05932da84788
 github.com/docker/go-events 9461782956ad83b30282bf90e31fa6a70c255ba9
