--- a/examples/overhead-logdriver.yaml
+++ b/examples/overhead-logdriver.yaml
@@ -4,12 +4,16 @@ command: stress --cpu 1 --io 1 --vm 1 --vm-bytes 128M --timeout 10s
 rootfs: /tmp/overhead_bench/
 detached: true
 drivers:
-- type: Containerd
+- type: DockerCLI
   threads: 4
   iterations: 3
+  logDriver: json-file
+  logOpts:
+    max-size: 15m
 - type: Docker
   threads: 4
   iterations: 3
+  logDriver: syslog
 commands:
 - run
 - stats
