--- a/vendor.conf
+++ b/vendor.conf
@@ -27,3 +27,4 @@ github.com/shirou/gopsutil 77e5abb6f06f55ebb685c9af26bcd3c58082e702
 github.com/docker/docker 192ff56d879238ecd6af8895a7ebe820a4a57a49
 github.com/docker/go-connections v0.4.0
 github.com/docker/distribution 1cb4180b1a5b9c029b2f2beaeb38f0b5cf64e12e
+github.com/docker/go-units 47565b4f722fb6ceae66b95f853feed578a4a51c
