Update cri-o socket location
Signed-off-by: Phil Estes <estesp@gmail.com>

--- a/examples/crio.yaml
+++ b/examples/crio.yaml
@@ -6,7 +6,7 @@ drivers:
    type: CRI
    threads: 5
    iterations: 1
-   clientpath: /var/run/crio.sock
+   clientpath: /var/run/crio/crio.sock
 commands:
   - run
   - stop
