--- a/contrib/container_config.json
+++ b/contrib/container_config.json
@@ -4,7 +4,7 @@
 		"attempt": 1
 	},
 	"image": {
-		"image": "alpine:latest"
+		"image": "docker.io/library/alpine:latest"
 	},
 	"command": [
 		"/bin/ls"
