--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.18.x
 
       - name: Set env
         shell: bash
@@ -30,9 +30,10 @@ jobs:
           fetch-depth: 25
 
       - name: Linter
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.29
+          version: v1.46.2
+          skip-cache: true
           working-directory: src/github.com/estesp/bucketbench
 
       - name: Install dependencies
